myapp-chart/templates/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: davidgalstyan/backend-app:latest
        ports:
        - containerPort: 7000
