myapp-chart/templates/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 7000       
      targetPort: 7000 
  type: ClusterIP
